# audd-rust

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  contract.yml  release.yml
examples/: custom_catalog_add.rs  recognize_enterprise.rs  recognize_file.rs  recognize_url.rs  scan_and_rename.rs  stream_to_csv.rs  streams_callback_handler.rs  streams_longpoll.rs  streams_setup.rs  tokenless_longpoll.rs
src/: advanced.rs  client.rs  custom_catalog.rs  errors.rs  helpers.rs  http.rs  lib.rs  longpoll.rs  models.rs  retry.rs  source.rs  streams.rs  user_agent.rs  version.rs
tests/: contract.rs  integration_wiremock.rs
